test/good/variables.lat
int main() {
    int n;
    n = 1;
    printInt(n);
    n = n + 1;
    printInt(n);
    n++;
    printInt(n);

    boolean b;
    b = true;
    if (b) {
        printInt(4);
    }
    b = false;
    if (b) {
        printInt(0);
    }

    int m = 2+3;
    n = 1;
    printInt(m);
    printInt(m+n);
}
