test/bad/mul.lat
int main() {
    int n;
    boolean b;
    n * b;
}
